<resources>
    <string name="app_name">Prac1</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_equal">=</string>
    <string name="_sum">+</string>
    <string name="_sub">-</string>
    <string name="_mul">x</string>
    <string name="_div">/</string>
    <string name="sign">+/-</string>
    <string name="clear">CE</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="convert">convert</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="calculate">Calculate</string>


</resources>