<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWrite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:maxLines="2"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="80sp"
        app:autoSizeMaxTextSize="80sp"
        app:autoSizeStepGranularity="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/tvDisplay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="80sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWrite" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay">

        <Button
            android:id="@+id/buttonMul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_mul"
            android:textColor="#E67018"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonDiv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_div"
            android:textColor="#E67018"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonSum"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_sum"
            android:textColor="#E67018"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonSub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_sub"
            android:textColor="#E67018"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttondot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign"
            android:textColor="#4F5359"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:text="@string/clear"
            android:textColor="#E67018"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:textSize="34sp"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_input_delete"
            app:iconSize="80dp"
            app:iconTint="#EF6803"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonEqual"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:backgroundTint="#E67018"
            android:text="@string/equal"
            android:textColor="#ffffff"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>